feat: PP-3101 Add ability to hide sticky share block

--- a/ShareThis/ShareButtons/view/frontend/templates/sharethis-inline-share-buttons.phtml
+++ b/ShareThis/ShareButtons/view/frontend/templates/sharethis-inline-share-buttons.phtml
@@ -4,7 +4,7 @@
 use ShareThis\ShareButtons\Block\ShareButtons;
 
 ?>
-<?php if ( $block->isEnabled() ) : ?>
+<?php if ( true === $block->isEnabled() ) : ?>
 	<div class="sharethis-inline-share-buttons"></div>
 
 	<style>
