--- a/ShareThis/ShareButtons/view/frontend/layout/cms_index_index.xml
+++ b/ShareThis/ShareButtons/view/frontend/layout/cms_index_index.xml
@@ -4,29 +4,14 @@
         <referenceContainer name="content">
             <block class="ShareThis\ShareButtons\Block\ShareButtons" name="st.ShareButtons.InlineTop" template="ShareThis_ShareButtons::sharethis-inline-share-buttons.phtml" before="-">
                 <arguments>
-                    <argument name="page" xsi:type="string">product_page</argument>
+                    <argument name="page" xsi:type="string">home_page</argument>
                     <argument name="position" xsi:type="string">above_content</argument>
                     <argument name="type" xsi:type="string">inline</argument>
                 </arguments>
             </block>
-        </referenceContainer>
-
-        <referenceContainer name="content">
-            <referenceContainer name="product.info.main">
-                <block class="ShareThis\ShareButtons\Block\ShareButtons" name="st.ShareButtons.InlineCart" template="ShareThis_ShareButtons::sharethis-inline-share-buttons.phtml">
-                    <arguments>
-                        <argument name="page" xsi:type="string">under_cart</argument>
-                        <argument name="position" xsi:type="string">under_cart</argument>
-                        <argument name="type" xsi:type="string">inline</argument>
-                    </arguments>
-                </block>
-            </referenceContainer>
-        </referenceContainer>
-
-        <referenceContainer name="content.aside">
             <block class="ShareThis\ShareButtons\Block\ShareButtons" name="st.ShareButtons.InlineBottom" template="ShareThis_ShareButtons::sharethis-inline-share-buttons.phtml" after="-">
                 <arguments>
-                    <argument name="page" xsi:type="string">product_page</argument>
+                    <argument name="page" xsi:type="string">home_page</argument>
                     <argument name="position" xsi:type="string">below_content</argument>
                     <argument name="type" xsi:type="string">inline</argument>
                 </arguments>
