--- a/view/frontend/templates/head.phtml
+++ b/view/frontend/templates/head.phtml
@@ -1,3 +1,10 @@
 <?php
+/**
+ * @author    ShareThis
+ * @copyright Copyright (c) 2022 ShareThis (https://sharethis.com)
+ * @license   https://www.gnu.org/licenses/gpl-3.0.html
+ * @package   ShareThis_ShareButtons
+ */
+
 /** @var \ShareThis\ShareButtons\Block\Head $block */
 $block->printScript();
