--- a/view/frontend/templates/sharethis-sticky-share-buttons.phtml
+++ b/view/frontend/templates/sharethis-sticky-share-buttons.phtml
@@ -1,5 +1,12 @@
 <?php
-/** @var ShareButtons $block */
+/**
+ * @author    ShareThis
+ * @copyright Copyright (c) 2022 ShareThis (https://sharethis.com)
+ * @license   https://www.gnu.org/licenses/gpl-3.0.html
+ * @package   ShareThis_ShareButtons
+ *
+ * @var ShareButtons $block
+ */
 
 use ShareThis\ShareButtons\Block\ShareButtons;
 
