chore: PP-3103 Update phpdoc

--- a/view/frontend/templates/head.phtml
+++ b/view/frontend/templates/head.phtml
@@ -4,7 +4,10 @@
  * @copyright Copyright (c) 2022 ShareThis (https://sharethis.com)
  * @license   https://www.gnu.org/licenses/gpl-3.0.html
  * @package   ShareThis_ShareButtons
+ *
+ * @var Head $block
  */
 
-/** @var \ShareThis\ShareButtons\Block\Head $block */
+use ShareThis\ShareButtons\Block\Head;
+
 $block->printScript();
