--- a/view/adminhtml/web/css/source/_variables.less
+++ b/view/adminhtml/web/css/source/_variables.less
@@ -1,5 +1,5 @@
 
-@color-blm: #000000;
+@color-blm: #000;
 @image-blm: 'https://platform-cdn.sharethis.com/img/blm.svg';
 
 @color-blogger: #ff8000;
@@ -11,7 +11,7 @@
 @color-delicious: #205cc0;
 @image-delicious: 'https://platform-cdn.sharethis.com/img/delicious.svg';
 
-@color-diaspora: #000000;
+@color-diaspora: #000;
 @image-diaspora: 'https://platform-cdn.sharethis.com/img/diaspora.svg';
 
 @color-digg: #262626;
@@ -29,22 +29,22 @@
 @color-flipboard: #e12828;
 @image-flipboard: 'https://platform-cdn.sharethis.com/img/flipboard.svg';
 
-@color-facebook: #4267B2;
+@color-facebook: #4267b2;
 @image-facebook: 'https://platform-cdn.sharethis.com/img/facebook.svg';
 
 @color-getpocket: #ef4056;
 @image-getpocket: 'https://platform-cdn.sharethis.com/img/pocket.svg';
 
-@color-gmail: #D44638;
+@color-gmail: #d44638;
 @image-gmail: 'https://platform-cdn.sharethis.com/img/gmail.svg';
 
-@color-googlebookmarks: #4285F4;
+@color-googlebookmarks: #4285f4;
 @image-googlebookmarks: 'https://platform-cdn.sharethis.com/img/googlebookmarks.svg';
 
 @color-hackernews: #ff4000;
 @image-hackernews: 'https://platform-cdn.sharethis.com/img/hackernews.svg';
 
-@color-instapaper: #000000;
+@color-instapaper: #000;
 @image-instapaper: 'https://platform-cdn.sharethis.com/img/instapaper.svg';
 
 @color-line: #00c300;
@@ -62,19 +62,19 @@
 @color-meneame: #ff6400;
 @image-meneame: 'https://platform-cdn.sharethis.com/img/meneame.svg';
 
-@color-messenger: #448AFF;
+@color-messenger: #448aff;
 @image-messenger: 'https://platform-cdn.sharethis.com/img/messenger.svg';
 
 @color-odnoklassniki: #d7772d;
 @image-odnoklassniki: 'https://platform-cdn.sharethis.com/img/odnoklassniki.svg';
 
-@color-pinterest: #CB2027;
+@color-pinterest: #cb2027;
 @image-pinterest: 'https://platform-cdn.sharethis.com/img/pinterest.svg';
 
-@color-print: #222222;
+@color-print: #222;
 @image-print: 'https://platform-cdn.sharethis.com/img/print.svg';
 
-@color-qzone: #F1C40F;
+@color-qzone: #f1c40f;
 @image-qzone: 'https://platform-cdn.sharethis.com/img/qzone.svg';
 
 @color-reddit: #ff4500;
@@ -95,7 +95,7 @@
 @color-sms: #ffbd00;
 @image-sms: 'https://platform-cdn.sharethis.com/img/sms.svg';
 
-@color-snapchat: #FFFC00;
+@color-snapchat: #fffc00;
 @image-snapchat: 'https://platform-cdn.sharethis.com/img/snapchat.svg';
 
 @color-stumbleupon: #eb4924;
@@ -104,10 +104,10 @@
 @color-surfingbird: #6dd3ff;
 @image-surfingbird: 'https://platform-cdn.sharethis.com/img/surfingbird.svg';
 
-@color-telegram: #37AEE2;
+@color-telegram: #37aee2;
 @image-telegram: 'https://platform-cdn.sharethis.com/img/telegram.svg';
 
-@color-threema: #000000;
+@color-threema: #000;
 @image-threema: 'https://platform-cdn.sharethis.com/img/threema.svg';
 
 @color-tumblr: #32506d;
@@ -119,10 +119,10 @@
 @color-vk: #4c6c91;
 @image-vk: 'https://platform-cdn.sharethis.com/img/vk.svg';
 
-@color-wechat: #4EC034;
+@color-wechat: #4ec034;
 @image-wechat: 'https://platform-cdn.sharethis.com/img/wechat.svg';
 
-@color-weibo: #ff9933;
+@color-weibo: #f93;
 @image-weibo: 'https://platform-cdn.sharethis.com/img/weibo.svg';
 
 @color-whatsapp: #25d366;
