--- a/view/frontend/layout/catalog_product_view.xml
+++ b/view/frontend/layout/catalog_product_view.xml
@@ -9,6 +9,14 @@
                     <argument name="type" xsi:type="string">inline</argument>
                 </arguments>
             </block>
+
+            <block class="ShareThis\ShareButtons\Block\ShareButtons" name="st.ShareButtons.Sticky" template="ShareThis_ShareButtons::sharethis-sticky-share-buttons.phtml">
+                <arguments>
+                    <argument name="page" xsi:type="string">product_page</argument>
+                    <argument name="position" xsi:type="string">sticky_position</argument>
+                    <argument name="type" xsi:type="string">sticky</argument>
+                </arguments>
+            </block>
         </referenceContainer>
 
         <referenceContainer name="content">
